# chikuraku

./: .env  .gitignore  Dockerfile.dev.chika  Dockerfile.dev.kura  Dockerfile.dev.rabbitmq  Dockerfile.prod.chika  LICENSE  README.md  docker-compose.yml
chika/: listen_messages_test.py  manage.py  requirements.txt  websocket.py
chika/chat/: admin.py  channels.py  urls.py  views.py
chika/chat/migrations/: 0001_initial.py
chika/chika/: __init__.py  asgi.py  celery.py  settings.py  urls.py  views.py  wsgi.py
chika/spa/src/app/: index.js  reducers.js  store.js
chika/spa/src/chat/: index.js
chika/spa/src/constants/: index.js
chika/spa/src/helpers/: auth.js
chika/spa/src/session/: context.js  index.js  withAuthorization.js
chika/spa/src/signIn/: index.js  index.scss
chika/spa/src/signIn/components/: SignInForm.js  SignInForm.scss
chika/spa/src/stomp/: context.js  index.js  stomp.js
db/src/: init.sql
db/src/authorization/: roles.sql
kura/: Cargo.toml
kura/src/: lib.rs  main.rs
