[package]
name = "kura"
version = "0.1.0"
authors = ["Viktor Nareiko <vnareiko.lt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amqp = "0.1.3"
env_logger = "0.7.1"
fallible-iterator = "0.2.0"
log = "0.4.0"
postgres = "0.17.3"
r2d2 = "0.8.8"
r2d2_postgres = "0.16.0"
